objects/recordval__rv2ObjectMeta__c.object
<CustomObject>
    <fields>
        <fullName>recordval__isFieldMeta__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is payload contains field meta data of object</description>
        <label>Boolean isFieldMeta data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recordval__isObjectMeta__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if payload contains object meta data</description>
        <label>Boolean isObjectMeta data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recordval__key__c</fullName>
        <label>Object Api Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordval__order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>recordval__payload__c</fullName>
        <label>JSON Object Meta</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>recordval__uniqueKey__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Record Validation Object Meta</label>
    <nameField>
        <displayFormat>ObjectMeta{0000000000}</displayFormat>
        <label>ObjectMetaIdentifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Validation Object Metas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>